--- a/gulimall-order/src/main/resources/templates/confirm.html
+++ b/gulimall-order/src/main/resources/templates/confirm.html
@@ -739,12 +739,12 @@
         <p class="yfze_a"><span class="z">应付总额：</span><span class="hq">￥ <b id="payPriceEle">[[${#numbers.formatDecimal(orderConfirm.getPayPrice(),1,2)}]]</b></span></p>
         <p class="yfze_b">寄送至：<b id="receiveAddressEle"></b> 收货人：<b id="receiverEle"></b></p>
     </div>
-    <form action="http://gulimall.com/api/submitOrder" method="post">
+    <form action="http://gulimall.com/submitOrder" method="post">
         <input type="hidden" name="addrId" id="addrId">
         <input type="hidden" name="payPrice" id="payPrice">
         <input type="hidden" name="payType" id="payType">
         <input type="hidden" name="orderToken" th:value="${orderConfirm.getOrderToken()}"/>
-        <button class="tijiao">提交订单</button>
+        <button class="tijiao" type="submit">提交订单</button>
     </form>
 
 </div>
