订单确认页面

--- a/gulimall-order/src/main/resources/templates/confirm.html
+++ b/gulimall-order/src/main/resources/templates/confirm.html
@@ -739,7 +739,7 @@
         <p class="yfze_a"><span class="z">应付总额：</span><span class="hq">￥ <b id="payPriceEle">[[${#numbers.formatDecimal(orderConfirm.getPayPrice(),1,2)}]]</b></span></p>
         <p class="yfze_b">寄送至：<b id="receiveAddressEle"></b> 收货人：<b id="receiverEle"></b></p>
     </div>
-    <form action="http://gulimall.com/submitOrder" method="post">
+    <form action="http://order.gulimall.com/submitOrder" method="post">
         <input type="hidden" name="addrId" id="addrId">
         <input type="hidden" name="payPrice" id="payPrice">
         <input type="hidden" name="payType" id="payType">
