--- a/gulimall-order/src/main/resources/templates/pay.html
+++ b/gulimall-order/src/main/resources/templates/pay.html
@@ -20,8 +20,9 @@
         <dl>
           <dt><img src="static/order/pay/img/saoyisao.png" alt=""></dt>
           <dd>
-            <span>订单提交成功，请尽快付款！订单号：[[${order.orderEntity.orderSn}]]</span>
-            <span>应付金额<font>[[${numbers.formatDecimal(order.orderEntity.payAmount,1,2)}]]</font>元</span>
+            [[${order}]]
+<!--            <span>订单提交成功，请尽快付款！订单号：[[${order.getOrderEntity().orderSn}]]</span>-->
+<!--            <span>应付金额<font>[[${numbers.formatDecimal(order.getOrderEntity().getPayAmount(),1,2)}]]</font>元</span>-->
           </dd>
           <dd>
             <span>推荐使用</span>
